@@ -1,5 +1,7 @@
 Revision history for Async::IPC
 
+          - Added Functions::log_key_width class method
+          - Sigattaches now fork safe
           - Added the type attr to Base. Make type and name unique
           - Add use of Future
           - The log_* functions have an alternate signature
